Use custom HttpHeaders.